# simpa-mcp

./: .coverage  .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  llm_cache.db  main.py  pyproject.toml  pytest.ini  quick_refine.py  start_simpa.py
.pi/messenger/: feed.jsonl
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_update_schema_for_architecture.py  003_add_optimization_schema.py  004_add_projects.py  005_rename_diffs_column.py  006_remove_score_distribution.py  007_add_refined_prompt_hash_index.py  008_add_refinement_type.py  009_add_bm25_tables.py  010_add_project_structure.py
dev-agent-workspace/: dt-developer-response.json
docs/: Cant_fix_tests-20260303.md  Integration_Test_Failures_Report-20260303.md  Integration_Test_Failures_Report-FINAL-20260303.md  Test_Fixes_Summary-20260303.md  script-driven-dt-worker.py
docs/design/: OpenProse-SIMPA-Integration-Architecture.md  OpenProse-SIMPA-Integration-Test-Plan.md  SIMPA - A Self Improving Meta Prompt Agent.md  SIMPA-Architecture-20260303.md
docs/implementation/: MCP-Tool-Scoping-Guide.md  REFINEMENT_IMPROVEMENTS.md  SCOPE_INJECTION_FIX.md  SIMPA-Process-Architecture.md  dt-developer-docker-task-completion.md  prompt-refinement-enhancement.md  prompt-refinement-implementation-summary.md  test_suite_development.md
sql/: bm25_stored_procs.sql
src/: main.py
src/simpa/: config.py  (+3 more)
test-scripts/: test_15_prompts_full_table.md  test_15_prompts_results.md  test_15_realworld_prompts.py  test_15_realworld_prompts_simple.py  test_15_scope_aware.py  test_15_scope_injection_report.md  test_scope_demo.py
tests/: conftest.py  requirements-test.txt  test_plan.md
(+59 files in other folders)
