[project]
name = "simpa-mcp"
version = "0.1.0"
description = "SIMPA - Self-Improving Meta Prompt Agent MCP Service"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "testcontainers>=4.0.0",
    "python-on-whales>=0.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/simpa"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external services (TestContainers, PostgreSQL)",
    "unit: marks tests that don't require external services",
    "db: marks tests that require database access",
    "docker: marks tests that require Docker daemon",
    "slow: marks tests that take longer than 30 seconds",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cover>=3.0.0",
    "testcontainers>=4.0.0",
]
